--- a/public/css/app.css
+++ b/public/css/app.css
@@ -965,6 +965,9 @@ select {
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1037,6 +1040,9 @@ select {
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mr-1 {
+  margin-right: 0.25rem;
 }
 .mb-24 {
   margin-bottom: 6rem;
@@ -1439,6 +1445,9 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
+.p-10 {
+  padding: 2.5rem;
+}
 .p-5 {
   padding: 1.25rem;
 }
@@ -1527,6 +1536,9 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -1764,6 +1776,10 @@ select {
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+/* Estilos Personalizados */
+[x-cloak] {
+    display: none !important;
 }
 .odd\:bg-sky-100:nth-child(odd) {
   --tw-bg-opacity: 1;
