--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+/* Estilos Personalizados */
+
+[x-cloak] {
+    display: none !important;
+}
